tests/src/frontend/typechecking/invalid/bad_default_value_method.sk
mutable base class P {
  children =
  | L()
  | R()
}

class Test() {
  fun no1{x: L = R()}: void {
    void
  }
  static fun no2{x: mutable L = L()}: void {
    void
  }
}
